examples/test/testpolicy9667.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9667
  namespace: namespace343
spec:
  podSelector:
    matchLabels:
      key29: value0
      key44: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value25
      podSelector:
        matchLabels:
          key32: value4
          key6: value48
          key39: value38
